# Other

./: _ASCII.txt
360T - Home Assessment/: pom.xml
360T - Home Assessment/src/main/java/org/threehundredsixtyt/: Main.java
360T - Home Assessment/src/main/java/org/threehundredsixtyt/channel/: ChannelTcp.java  (+2 more)
360T - Home Assessment/src/main/resources/: canerozdemir-both.cmd  canerozdemir-both.sh  canerozdemir-client.cmd  canerozdemir-client.sh  canerozdemir-server.cmd  canerozdemir-server.sh  config.properties
Autodesk - Home Assessment/: CMakeLists.txt  Interview.txt
Autodesk - Home Assessment/code/: main.cpp  mainwindow.cpp  mainwindow.h
Autodesk - Home Assessment/code/component/: erasertool.cpp  erasertool.h  menubar.h  paintarea.h  pencolor.h  penopacity.cpp  pensize.cpp
Autodesk - Home Assessment/code/data/: configuration.h
Autodesk - Home Assessment/resource/: resource.qrc  resource.rc
Autodesk Interview _ Home Assessment - Caner Özdemir/: binary.url
Autodesk Interview _ Home Assessment - Caner Özdemir/code/: mainwindow.ui
Autodesk Interview _ Home Assessment - Caner Özdemir/code/component/: menubar.cpp  menubar.ui  paintarea.cpp  pencolor.cpp  penopacity.h  pensize.h  pentool.cpp  pentool.h  zoom.cpp  zoom.h
Autodesk Interview _ Home Assessment - Caner Özdemir/code/data/: configuration.cpp
Autodesk Interview _ Home Assessment - Caner Özdemir/resource/Style/: dark.qss
Maintenance/: Create _ASCII.txt and _Binary.txt.py  List BOM_UTF8.py  List Not Lowercase Extension.py  Verify Bookmark.py  Verify URL.py  Verify Web.py  WhiteSpace-Content.txt
(+13 files in other folders)
